# meeting-bots

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  demo.html  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
assets/videos/: standup.y4m
demo/: index.html  pcm-processor.js
diart-service/: .dockerignore  app.py  diart.Dockerfile  environment.yml  pyproject.toml
diart-service/app/: app.py  audio_processing.py  file_processor.py  in_memory_audio_source.py  save_audio.py  server.py
diart-service/app/processors/: file_processor.py  websocket_processor.py
src/: AbstractMeetBot.ts  GoogleMeetBot.ts  config.ts  index.ts  joinGoogleMeet.ts  types.ts
src/util/bots/: AbstractMeetBot.ts
tests/: example.spec.ts
